--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ a {
 #wrapper {
 	width:100%;
 	position: relative;
-	padding-top: 60px;
+	padding-top: 61px;
 }
 #inner-wrapper{
 	width:100%;
